# shared-room

./: alsa-learning  architecture  bring-up  presume  program1_question  rcore_presume  readme.txt
EBPF/: command  ebpf+arch
ai-carline-code/: README.md
ai-carline-code/backend/: go.mod
ai-carline-code/frontend/app/: globals.css  page.tsx
code/: .gitignore
code/frontend/: package.json
code/frontend/app/: layout.tsx
code/frontend/lib/: api.ts
ebpf-code/: Makefile  README.md  test_leak.c
ebpf-code/bpf/: mem.bpf.c
ebpf-code/docs/: code-analysis.md  week1.md  week2.md
ebpf-code/include/: mem_common.h
ebpf-code/output/: memsnoop  test_leak
ebpf-code/scripts/: gen_vmlinux.sh  run.sh  stress_alloc.sh
ebpf-code/user/: main.c  mem.skel.h  stats.c  symbol.c
ebpfcode/: vmlinux.h
k3-code/: CMakeLists.txt  README.md  change
k3-code/include/: dsp_engine.hpp  frame_dispatcher.hpp  lockfree_ring_buffer.hpp  persistence_worker.hpp  playback_bypass.hpp  shm_transport.hpp  types.hpp  ui_bridge.hpp
k3-code/question/: ai_app  ai_tool  alsa-interview-20.md  alsa-question  k3-question  openamp  question
k3-code/src/: dsp_engine.cpp  frame_dispatcher.cpp  main.cpp  persistence_worker.cpp  playback_bypass.cpp  shm_transport.cpp  ui_bridge.cpp
method-ebpf/: command  ebpf+arch  interview-questions.md
method-ebpf/reise/: ebpf-code-review.md  week6-week7-implementation.md
other/: arm-interview-20.md  riscv-interview-20.md
rcore/: command  qemuquestion  rcore_question  resume  revise_improve
web/: server.py
web-for-source/: index.html
(+19 files in other folders)
